# NoteForge-AI

./: .gitignore  README.md  app.py  cache.json  main.ipynb  main.py  pyproject.toml  requirements.txt
graph/: graph_builder.py  nodes.py  state.py
prompts/: prompts.py
rag/: vectordb.py
utils/: cache.py  helper.py
