[project]
name = "sem-helper-notes-prep-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.4.1",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "fpdf>=1.7.2",
    "groq>=0.37.1",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.20",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.3",
    "mcp>=1.26.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.2.2",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.55.0",
    "tavily-python>=0.7.23",
    "weasyprint>=68.1",
]
